--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,10 @@ chrono = "0.4.*"
 cached = "0.42.*"
 secrecy = "0.8.*"
 symlink = "0.1.*"
-structopt = "0.*"
 fs_extra = "1.3.*"
 crossbeam = "0.8.*"
 serde_derive = "1.0.*"
 jsonwebtoken = "8.2.*"
 tokio = { version = "1.26.*", features = ["full"] }
+clap = { version = "4.1.*", features = ["derive", "env"] }
 octocrab = { version = "0.18.*", features = ["rustls-tls"], default-features = false }
