--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ concurrency:
 
 jobs:
   check:
+    name: Run checks
     runs-on: ubuntu-latest
-    name: Run various code linters
 
     permissions:
       checks: write
