add basic logging setup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,8 @@ jsonwebtoken = "8.2.*"
 tokio = { version = "1.26.*", features = ["full"] }
 clap = { version = "4.1.*", features = ["derive", "env"] }
 octocrab = { version = "0.18.*", features = ["rustls-tls"], default-features = false }
+
+# logging
+log = "0.4.*"
+syslog = "6.0.*"
+simple_logger = "4.0.*"
