--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,19 +22,19 @@ codegen-units = 1
 anyhow = "*"
 axum = "0.6.*"
 serde = "1.0.*"
-cached = "0.43.*"
+cached = "0.44.*"
 secrecy = "0.8.*"
 symlink = "0.1.*"
 fs_extra = "1.3.*"
+octocrab = "0.25.*"
 crossbeam = "0.8.*"
 serde_derive = "1.0.*"
 jsonwebtoken = "8.3.*"
-tokio = { version = "1.27.*", features = ["full"] }
+tokio = { version = "1.28.*", features = ["full"] }
 chrono = { version = "0.4.*", default-features = false }
-clap = { version = "4.2.*", features = ["derive", "env"] }
-octocrab = { version = "0.19.*", features = ["rustls-tls"], default-features = false }
+clap = { version = "4.3.*", features = ["derive", "env"] }
 
 # logging
 log = "0.4.*"
-syslog = "6.0.*"
+syslog = "6.1.*"
 simple_logger = "4.1.*"
