--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,17 +22,17 @@ codegen-units = 1
 anyhow = "*"
 axum = "0.6.*"
 serde = "1.0.*"
-cached = "0.44.*"
+cached = "0.46.*"
 secrecy = "0.8.*"
 symlink = "0.1.*"
 fs_extra = "1.3.*"
-octocrab = "0.29.*"
+octocrab = "0.31.*"
 crossbeam = "0.8.*"
 serde_derive = "1.0.*"
-jsonwebtoken = "8.3.*"
-tokio = { version = "1.32.*", features = ["full"] }
+jsonwebtoken = "8.3.*" # access to stuff in octocrab, leave this version
+tokio = { version = "1.33.*", features = ["full"] }
 chrono = { version = "0.4.*", default-features = false }
-clap = { version = "4.3.*", features = ["derive", "env"] }
+clap = { version = "4.4.*", features = ["derive", "env"] }
 
 # logging
 log = "0.4.*"
