--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,21 +20,21 @@ codegen-units = 1
 
 [dependencies]
 anyhow = "*"
-axum = "0.6.*"
+axum = "0.7.*"
 serde = "1.0.*"
 cached = "0.46.*"
 secrecy = "0.8.*"
 symlink = "0.1.*"
 fs_extra = "1.3.*"
-octocrab = "0.31.*"
+octocrab = "0.32.*"
 crossbeam = "0.8.*"
 serde_derive = "1.0.*"
-jsonwebtoken = "8.3.*" # access to stuff in octocrab, leave this version
-tokio = { version = "1.33.*", features = ["full"] }
+jsonwebtoken = "9.2.*"
+tokio = { version = "1.35.*", features = ["full"] }
 chrono = { version = "0.4.*", default-features = false }
 clap = { version = "4.4.*", features = ["derive", "env"] }
 
 # logging
 log = "0.4.*"
 syslog = "6.1.*"
-simple_logger = { version = "4.2.*", default-features = false, features = ["timestamps"] }
+simple_logger = { version = "4.3.*", default-features = false, features = ["timestamps"] }
